# gtsa

./: .dockerignore  Cargo.toml  Dockerfile  Readme.md
.github/workflows/: rust.yml
gelf_docker/: Dockerfile  docker-compose.yaml  run.sh
src/: main.rs
src/gelf/: acceptor.rs  error.rs  gelf_message_printer.rs  gelf_message_processor.rs  gelf_reader.rs  mod.rs  reader.rs  tcp_acceptor.rs  udp_acceptor.rs  unpacking.rs
src/sentry/: mod.rs  sentry_processor.rs
