[package]
name = "gelf-receiver"
version = "0.1.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix = "0.9"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
flate2 = "1.0"
scan_fmt = "0.2"
reqwest = { version = "0.10", features = ["json"] }