[package]
name = "gtsa"
version = "0.2.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"
description = "Simple proxy gelf messages to the Sentry."
license="MIT"
keywords = ["proxy", "sentry", "graylog", "gelf"]
categories = ["development-tools"]
readme = "Readme.md"
documentation = "https://mnwa.github.io/gtsa/"
homepage = "https://mnwa.github.io/gtsa/"
repository = "https://github.com/Mnwa/gtsa"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix = "0.9"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
flate2 = "1.0"
scan_fmt = "0.2"
reqwest = { version = "0.10", features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
lru = "0.4"